--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-langchain
-python-dotenv
 streamlit
-unstructured
-tiktoken
+langchain
+langchain_openai
+langchain_text_splitters
+langchain_community
+youtube-transcript-api
 faiss-cpu
-libmagic
-OpenAI
